# BelajarC

./: CMakeLists.txt  Readme.MD  array-dan-pointer.c  array-dan-pointer2.c  console.c  ctrflw-percabangan-ifelse.c  ctrflw-percabangan-switch.c  ctrflw-perulangan-while.c  custom_math.c  custom_math.h  exc-var-bool.c  exc-var-size.c  exc-var.c  fungsi.c  hello.c  pointer.c  prepocessor.c  str-char.c  struct-union.c  union.c
Versi2/: README.md  charcount.c  count-char.c  exercise1.c  exercise2.c  exercise3.c  fah-cel.c  for-count-char.c  for-fah-cel.c  input-output.c  line_counting.c  program  wordcounting.c
