cmake_minimum_required(VERSION 3.00)

project(c-programming C)

add_executable(hello hello.c)
add_executable(exc-var exc-var.c)
add_executable(exc-var-size exc-var-size.c)
add_executable(exc-var-bool exc-var-bool.c)
add_executable(ctrflw-percabangan-ifelse ctrflw-percabangan-ifelse.c)
add_executable(ctrflw-percabangan-switch ctrflw-percabangan-switch.c)
add_executable(ctrflw-perulangan-while ctrflw-perulangan-while.c)
add_executable(fungsi fungsi.c)
add_executable(pointer pointer.c)