cmake_minimum_required(VERSION 3.00)

project(c-programming C)

add_executable(hello hello.c)
add_executable(exc-var exc-var.c)
add_executable(exc-var-size exc-var-size.c)
add_executable(exc-var-bool exc-var-bool.c)
add_executable(ctrflw-percabangan-ifelse ctrflw-percabangan-ifelse.c)
add_executable(ctrflw-percabangan-switch ctrflw-percabangan-switch.c)
add_executable(ctrflw-perulangan-while ctrflw-perulangan-while.c)
add_executable(fungsi fungsi.c)
add_executable(pointer pointer.c)
add_executable(array-dan-pointer array-dan-pointer.c)
add_executable(array-dan-pointer2 array-dan-pointer2.c)
add_executable(struct-union struct-union.c)
add_executable(union union.c)
add_executable(console console.c custom_math.c)
add_executable(str-char str-char.c)
add_executable(prepocessor prepocessor.c)
